tests/b_invalid/types.ri
extern (C) {
    proc malloc(sz: uint) -> rawptr;
}

struct St {
    f1: &int32;

    f2: (int32, int32, int32, int32, int32, int32, int32, int32, int32);

    f3: void;

    f4: pkg;
    f5: =;
}

proc main() { }
